engine/crates/engine-v2/query-solver/src/tests/snapshots/engine_v2_query_solver__tests__mutation__consecutive_subgraphs-graph.snap
---
source: engine/crates/engine-v2/query-solver/src/tests/mutation.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"id\" ]\n    2 [ label = \"createUser\" ]\n    3 [ label = \"upc\" ]\n    4 [ label = \"createProduct\" ]\n    5 [ label = \"id\" ]\n    6 [ label = \"createReview\" ]\n    7 [ label = \"Root#reviews\", shape=parallelogram, color=dodgerblue ]\n    8 [ label = \"createReview#reviews\", shape=box, color=dodgerblue ]\n    9 [ label = \"id#reviews\", shape=box, color=dodgerblue ]\n    10 [ label = \"Root#products\", shape=parallelogram, color=dodgerblue ]\n    11 [ label = \"createProduct#products\", shape=box, color=dodgerblue ]\n    12 [ label = \"upc#products\", shape=box, color=dodgerblue ]\n    13 [ label = \"Root#accounts\", shape=parallelogram, color=dodgerblue ]\n    14 [ label = \"createUser#accounts\", shape=box, color=dodgerblue ]\n    15 [ label = \"id#accounts\", shape=box, color=dodgerblue ]\n    0 -> 6 [ label = \"\" ]\n    0 -> 7 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 7 [ label = \"\", style=dashed,arrowhead=none ]\n    7 -> 8 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    8 -> 6 [ label = \"\", color=violet,arrowhead=none ]\n    6 -> 5 [ label = \"\" ]\n    8 -> 9 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    9 -> 5 [ label = \"\", color=violet,arrowhead=none ]\n    0 -> 4 [ label = \"\" ]\n    0 -> 10 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 10 [ label = \"\", style=dashed,arrowhead=none ]\n    10 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    11 -> 4 [ label = \"\", color=violet,arrowhead=none ]\n    4 -> 3 [ label = \"\" ]\n    11 -> 12 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    12 -> 3 [ label = \"\", color=violet,arrowhead=none ]\n    0 -> 2 [ label = \"\" ]\n    0 -> 13 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 13 [ label = \"\", style=dashed,arrowhead=none ]\n    13 -> 14 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    14 -> 2 [ label = \"\", color=violet,arrowhead=none ]\n    2 -> 1 [ label = \"\" ]\n    14 -> 15 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    15 -> 1 [ label = \"\", color=violet,arrowhead=none ]\n}\n"
---
digraph {
    0 [ root]
    1 [ id]
    2 [ createUser]
    3 [ upc]
    4 [ createProduct]
    5 [ id]
    6 [ createReview]
    7 [ Root#reviews]
    8 [ createReview#reviews]
    9 [ id#reviews]
    10 [ Root#products]
    11 [ createProduct#products]
    12 [ upc#products]
    13 [ Root#accounts]
    14 [ createUser#accounts]
    15 [ id#accounts]
    0 -> 6 [ label = "Field" ]
    0 -> 7 [ label = "CreateChildResolver" ]
    0 -> 7 [ label = "HasChildResolver" ]
    7 -> 8 [ label = "CanProvide" ]
    8 -> 6 [ label = "Provides" ]
    6 -> 5 [ label = "Field" ]
    8 -> 9 [ label = "CanProvide" ]
    9 -> 5 [ label = "Provides" ]
    0 -> 4 [ label = "Field" ]
    0 -> 10 [ label = "CreateChildResolver" ]
    0 -> 10 [ label = "HasChildResolver" ]
    10 -> 11 [ label = "CanProvide" ]
    11 -> 4 [ label = "Provides" ]
    4 -> 3 [ label = "Field" ]
    11 -> 12 [ label = "CanProvide" ]
    12 -> 3 [ label = "Provides" ]
    0 -> 2 [ label = "Field" ]
    0 -> 13 [ label = "CreateChildResolver" ]
    0 -> 13 [ label = "HasChildResolver" ]
    13 -> 14 [ label = "CanProvide" ]
    14 -> 2 [ label = "Provides" ]
    2 -> 1 [ label = "Field" ]
    14 -> 15 [ label = "CanProvide" ]
    15 -> 1 [ label = "Provides" ]
}
