engine/crates/engine-v2/query-solver/src/tests/snapshots/engine_v2_query_solver__tests__mutation__interleaved_subgraph_fields-finalized-solution.snap
---
source: engine/crates/engine-v2/query-solver/src/tests/mutation.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Root#reviews\", color=royalblue,shape=parallelogram ]\n    2 [ label = \"updateReview\" ]\n    3 [ label = \"id\" ]\n    4 [ label = \"createReview\" ]\n    5 [ label = \"id\" ]\n    6 [ label = \"Root#accounts\", color=royalblue,shape=parallelogram ]\n    7 [ label = \"updateUser\" ]\n    8 [ label = \"id\" ]\n    9 [ label = \"createUser\" ]\n    10 [ label = \"id\" ]\n    11 [ label = \"Root#products\", color=royalblue,shape=parallelogram ]\n    12 [ label = \"updateProduct\" ]\n    13 [ label = \"upc\" ]\n    14 [ label = \"createProduct\" ]\n    15 [ label = \"upc\" ]\n    16 [ label = \"Root#products\", color=royalblue,shape=parallelogram ]\n    17 [ label = \"Root#accounts\", color=royalblue,shape=parallelogram ]\n    18 [ label = \"Root#reviews\", color=royalblue,shape=parallelogram ]\n    0 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 18 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    2 -> 3 [ label = \"\" ]\n    1 -> 16 [ label = \"\", color=red ]\n    4 -> 5 [ label = \"\" ]\n    0 -> 6 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 17 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    7 -> 8 [ label = \"\" ]\n    17 -> 18 [ label = \"\", color=red ]\n    9 -> 10 [ label = \"\" ]\n    0 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 16 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    12 -> 13 [ label = \"\" ]\n    16 -> 17 [ label = \"\", color=red ]\n    14 -> 15 [ label = \"\" ]\n    11 -> 1 [ label = \"\", color=red ]\n    6 -> 11 [ label = \"\", color=red ]\n    17 -> 9 [ label = \"\" ]\n    16 -> 14 [ label = \"\" ]\n    18 -> 4 [ label = \"\" ]\n    16 -> 12 [ label = \"\" ]\n    17 -> 7 [ label = \"\" ]\n    18 -> 2 [ label = \"\" ]\n}\n"
---
digraph {
    0 [ label = "root" ]
    1 [ label = "Root#reviews" ]
    2 [ label = "updateReview" ]
    3 [ label = "id" ]
    4 [ label = "createReview" ]
    5 [ label = "id" ]
    6 [ label = "Root#accounts" ]
    7 [ label = "updateUser" ]
    8 [ label = "id" ]
    9 [ label = "createUser" ]
    10 [ label = "id" ]
    11 [ label = "Root#products" ]
    12 [ label = "updateProduct" ]
    13 [ label = "upc" ]
    14 [ label = "createProduct" ]
    15 [ label = "upc" ]
    16 [ label = "Root#products" ]
    17 [ label = "Root#accounts" ]
    18 [ label = "Root#reviews" ]
    0 -> 1 [ label = "QueryPartition" ]
    0 -> 18 [ label = "QueryPartition" ]
    2 -> 3 [ label = "Field" ]
    1 -> 16 [ label = "MutationExecutedAfter" ]
    4 -> 5 [ label = "Field" ]
    0 -> 6 [ label = "QueryPartition" ]
    0 -> 17 [ label = "QueryPartition" ]
    7 -> 8 [ label = "Field" ]
    17 -> 18 [ label = "MutationExecutedAfter" ]
    9 -> 10 [ label = "Field" ]
    0 -> 11 [ label = "QueryPartition" ]
    0 -> 16 [ label = "QueryPartition" ]
    12 -> 13 [ label = "Field" ]
    16 -> 17 [ label = "MutationExecutedAfter" ]
    14 -> 15 [ label = "Field" ]
    11 -> 1 [ label = "MutationExecutedAfter" ]
    6 -> 11 [ label = "MutationExecutedAfter" ]
    17 -> 9 [ label = "Field" ]
    16 -> 14 [ label = "Field" ]
    18 -> 4 [ label = "Field" ]
    16 -> 12 [ label = "Field" ]
    17 -> 7 [ label = "Field" ]
    18 -> 2 [ label = "Field" ]
}
